로그아웃 시 토큰 삭제
기본 css 추가
cors 설정 IP 주소 application.yml 로 이동

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ server:
     path: /error
 
 spring:
+  banner:
+    location: classpath:/custom-banner.txt
   application:
     name: CMS
   datasource:
@@ -91,3 +93,10 @@ management:
   health:
     circuitbreakers:
       enabled: true
+
+# application.yml
+cors:
+  allowed:
+    - "http://localhost"
+    - "http://127.0.0.1"
+    - "http://192.168.1.100"
