mybatis 를 사용해 mapper 구성, 쿼리 조회 추가
페이지 이동시 content 내용을 갈아끼우는 방식을 다시 원복

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 
     // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
