fullcalendar에 근무시간 조회를 위한로직 추가 중 임시 커밋

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+    implementation 'ch.qos.logback:logback-classic'
+    implementation 'org.slf4j:slf4j-api'
 
     // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
