--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -105,3 +105,7 @@ cors:
     - "http://127.0.0.1"
     - "http://192.168.1.100"
     - "http://localhost:3000"
+
+file:
+  upload:
+    path: "/Users/kimminsik/workspace/CMS/uploads/profiles"
