--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Database Configuration
-DB_USERNAME=root
-DB_PASSWORD=your_database_password
+DB_USERNAME=admin
+DB_PASSWORD=admin01
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key_here
