프로필 사진 업로드 오류 수정
일반 사용자 메뉴 접근 권한 조정
출퇴근, 연차, 외근, 출장 등 신청 내역과 결과 캘린더에 표시

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
     location: classpath:/custom-banner.txt
   application:
     name: CMS
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB      # 단일 파일 최대 크기
+      max-request-size: 10MB   # 전체 요청 최대 크기
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.0.12:3306/cms?useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
