환경 설정 .env 파일로 분리

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Environment Variables ###
+.env
+.env.local
+.env.*.local
+
+### Uploads ###
+uploads/
+/src/main/resources/static/uploads/
